[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/memo",
    "programs/system",
    "programs/token",
    "sdk/log/crate",
    "sdk/log/macro",
    "sdk/pinocchio",
    "sdk/pubkey",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"
rust-version = "1.79"

[workspace.dependencies]
five8_const = "0.1.4"
pinocchio = { version = "0.8", path = "sdk/pinocchio" }
pinocchio-log-macro = { version = "0.4", path = "sdk/log/macro" }
pinocchio-pubkey = { version = "0.2", path = "sdk/pubkey" }
quote = "1.0"
regex = "1"
syn = "1.0"

[workspace.metadata.cli]
solana = "2.2.0"

[workspace.metadata.toolchains]
build = "1.84.1"
format = "nightly-2024-11-22"
lint = "nightly-2024-11-22"
test = "1.84.1"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.metadata.spellcheck]
config = "scripts/setup/spellcheck.toml"
