[package]
name = "pinocchio-memo"
description = "Pinocchio helpers to invoke Memo program instructions"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { version = "0.8.3", path = "../../sdk/pinocchio" }
pinocchio-pubkey = { workspace = true }
