[package]
name = "pinocchio-memo"
description = "Pinocchio helpers to invoke Memo program instructions"
version = "0.2.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
