[package]
name = "pinocchio-pubkey"
description = "Companion pubkey helpers for Pinocchio"
version = "0.2.4"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[features]
default = ["const"]
const = ["dep:five8_const", "dep:sha2-const-stable"]

[dependencies]
five8_const = { workspace = true, optional = true }
sha2-const-stable = { version = "0.1.0", optional = true }
pinocchio = { workspace = true }
