[package]
name = "pinocchio-log"
description = "Lightweight log utility for Solana programs"
version = "0.5.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio-log-macro = { workspace = true, optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
] }

[features]
default = ["macro"]
macro = ["dep:pinocchio-log-macro"]
