[package]
name = "pinocchio-log-macro"
description = "Macro for pinocchio log utility"
version = "0.4.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }
